.metadata/.plugins/org.eclipse.cdt.ui/test.build.log
15:33:37 **** Incremental Build of configuration Debug for project test ****
make all 
Building file: ../src/test1.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/test1.d" -MT"src/test1.d" -o "src/test1.o" "../src/test1.cpp"
../src/test1.cpp: In function ‘int main()’:
../src/test1.cpp:33:21: error: no match for ‘operator=’ (operand types are ‘in_addr’ and ‘in_addr_t {aka unsigned int}’)
  clientaddr.sin_addr=inet_addr("172.20.1.174");
                     ^
In file included from /usr/include/arpa/inet.h:22:0,
                 from ../src/test1.cpp:9:
/usr/include/netinet/in.h:31:8: note: candidate: in_addr& in_addr::operator=(const in_addr&)
 struct in_addr
        ^
/usr/include/netinet/in.h:31:8: note:   no known conversion for argument 1 from ‘in_addr_t {aka unsigned int}’ to ‘const in_addr&’
../src/test1.cpp:42:7: warning: unused variable ‘n’ [-Wunused-variable]
   int n=10,i=0;
       ^
src/subdir.mk:27: recipe for target 'src/test1.o' failed
make: *** [src/test1.o] Error 1

15:33:37 Build Finished (took 337ms)

